<resources>
    <string name="app_name">Fridgium</string>
    <string name="fridge">hladnjak</string>
    <string name="recipes">recepti</string>
    <string name="shopping_list">kupovina</string>
    <string name="poruka_greske_hladnjak">Namirnice hladnjaka trenutno nisu dostupne :(</string>
    <string name="oduzimanje_kolicine">-</string>
    <string name="dodavanje_kolicine">+</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="add_items">Dodaj namirnice u listu za kupovinu!</string>
    <string name="tekst_toast_recept_err">Servis nije dostupan.</string>
    <string name="naziv">Naziv:</string>
    <string name="koli_ina">Količina:</string>
    <string name="mjerna_jedinica">Mjerna jedinica:</string>
    <string name="nova_namirnica_lista_za_kupovinu">Dodaj novu namirnicu u listu</string>
    <string name="dodaj">dodaj</string>
    <string name="dodaj_kolicinu_namirnice">Dodaj količinu namirnice</string>
    <string name="oduzmi_kolicinu_namirnice">Oduzmi količinu namirnice</string>
    <string name="poruka_greske_spinner_mj">Greška kod dohvaćanja mjernih jedinica</string>
    <string name="prika_i_vi_e">Prikaži više</string>
    <string name="slika_jela">Slika jela</string>
    <string name="vracanje_na_fragment_recept">vracanje na fragment recept</string>
    <string name="slika_recepta">Slika recepta</string>
    <string name="tu_sam">tu sam</string>
    <string name="dodaj_novi_recept">Dodaj novi recept</string>
    <string name="kolicina">Kolicina</string>
    <string name="nazivnovogrecepta">Naziv:</string>
    <string name="dodavanje_novog_recepta">Dodavanje novog recepta</string>
    <string name="opis">Opis:</string>
    <string name="sarma">Sarma</string>
    <string name="sarma_je_nezaobilazno_tradicionalno_zimsko_jelo_a_mi_donosimo_najbolje_savjete_chefa_berislava_lackovi_a_kako_da_svoju_sarmu_podigne_na_jo_vi_u_razinu">Sarma je nezaobilazno tradicionalno zimsko jelo, a mi donosimo najbolje savjete chefa Berislava Lackovića kako da svoju sarmu podigneš na još višu razinu</string>
    <string name="odabrano_da_ne">Odabrano,da/ne</string>
    <string name="odaberite_koli_inu_koju_elite_dodati">Odaberite količinu koju želite dodati:</string>
    <string name="unesi_naziv_namirnice">Unesi naziv namirnice:</string>
    <string name="odaberite_koli_inu_namirnice_koju_elite_dodati">Odaberite količinu namirnice koju želite dodati:</string>
    <string name="odaberi_mjernu_jedinicu_namirnice">Odaberi mjernu jedinicu namirnice:</string>
    <string name="hladnjak_je_prazan">Hladnjak je prazan.</string>
    <string name="dodaj_namirnicu_u_hladnjak">Dodaj namirnicu u hladnjak.</string>
    <string name="slika_namirnice">Slika namirnice</string>
    <string name="odaberite_koli_inu_koju_elite_oduzeti">Odaberite količinu koju želite oduzeti:</string>
    <string name="ure_ivanje_namirnice">Uređivanje namirnice</string>
    <string name="naziv_namirnice">Naziv namirnice:</string>
    <string name="mjerna_jedinica_namirnice">Mjerna jedinica namirnice:</string>
    <string name="postavke_favorita">Postavke favorita</string>
    <string name="min_koli_ina">Min količina :</string>
    <string name="_0">0</string>
</resources>