<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:elevation="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SurfaceView
            android:id="@+id/sv_boja_favorit"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <ImageView
            android:id="@+id/img_ikona_namirnice_hladnjak"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/slika_namirnice"
            android:padding="3dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_ime_namirnice"
                android:layout_width="0sp"
                android:layout_weight="3.5"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxLength="18"
                android:ellipsize="end"
                android:textSize="14sp"
                tools:text="Nazivnamirniceaaaaaa" />

            <Button
                android:id="@+id/button_oduzimaj"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/oduzimanje_kolicine"
                android:layout_weight="1.5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_kolicina_hladnjak"
                android:maxLength="5"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mjernaJedinica_hladnjak"
                android:maxLength="3"
                android:layout_weight="1.2"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/button_dodaj"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="50dp"
                android:text="@string/dodavanje_kolicine" />


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
